fix spacing after h1

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,7 @@ header h1 {
     /*font-family: 'EB Garamond', serif;/*/
     font-size: 2.5rem;
     padding-top: 0.5em;
+    padding-bottom: 1em;
     margin: 0rem;
 }
 
@@ -139,9 +140,14 @@ header h1 {
 }
 
 .me img {
+    margin-top: -3em;
     margin-bottom: 1rem;
     border-radius: 0.5rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 5px 0 rgba(0, 0, 0, 0.1);
+}
+
+.me p {
+    padding-top: 1em;    
 }
 
 .photo-credit {
